--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1,4 +1,5 @@
 body{
+  font-family: "Roboto", sans-serif;
   display: grid;
   place-content: center;
   height: auto;
@@ -12,6 +13,12 @@ body{
   
   
   
+}
+.question-container{
+  
+  font-weight:bold;
+  font-style: normal;
+  color: #3b230b;
 }
 
 .next-button-container{
@@ -34,7 +41,7 @@ body{
 }
 .next-button:hover{
   
-  background-color: #c49665;
+  
   padding: 8px 20px 8px 20px;
 
   
@@ -49,6 +56,11 @@ body{
 }
 
 .mcq-option{
-  border: 1px solid  #412508;
+  font-size: 15px;
+  background-color: #c49665;
+  display: grid;
+  place-content: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
   cursor: pointer;
 }
